optimize:[simple-base-generator]创建List方法-适配JDK8